--- a/templates/index.html
+++ b/templates/index.html
@@ -1,70 +1,130 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Flask App</title>
-  </head>
-  <body>
+    <style>
+        .suggestion-list {
+            display: none;
+            position: absolute;
+            width: 100%;
+            z-index: 100;
+        }
+
+        .contract {
+            margin-left: 0rem;
+        }
+
+        .statistics-container,
+        .company-info-container,
+        .contract-info-container {
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            padding: 1rem;
+            background-color: #f8f9fa;
+            margin-bottom: 1rem;
+        }
+    </style>
+</head>
+
+<body>
     <div class="container mt-5">
-      <div class="row">
-        <div class="col">
-          <h1 class="text-center mb-5">Поиск контрагентов</h1>
-          <input type="text" class="form-control" id="search" placeholder="Введите название контрагента">
-          <div id="suggestions" class="list-group mt-3" style="display:none;"></div>
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center mb-5">Поиск</h1>
+                <input type="text" class="form-control" id="search" placeholder="Введите название контрагента">
+                <div id="suggestions" class="list-group mt-3" style="display:none;"></div>
+            </div>
         </div>
-      </div>
-      <div class="row mt-5" id="results" style="display:none;">
-        <div class="col">
-          <button class="btn btn-primary mb-3" id="back">Вернуться к поиску</button>
-          <div id="details"></div>
+
+        <div class="row mt-5" id="statistics">
+            <div class="col">
+                <div class="statistics-container">
+                    <h4>Статистика</h4>
+                    <p>Количество компаний на просрочке: <span id="unique-inn-count"></span></p>
+                    <p>Количество договоров на просрочке: <span id="contract-count"></span></p>
+                    <p>Сумма всех просроченных платежей: <span id="total-delay-sum"></span></p>
+                </div>
+            </div>
         </div>
-      </div>
+
+        <div class="row mt-5" id="results" style="display:none;">
+            <div class="col">
+                <div id="details"></div><br>
+                <button class="btn btn-primary mb-3" id="back">Назад</button>
+            </div>
+        </div>
     </div>
     <script>
-        $(document).ready(function() {
-          function showSuggestions(data) {
-            $("#suggestions").empty().fadeIn(300);
-            $.each(data, function(index, item) {
-              let suggestion = $('<a href="#" class="list-group-item list-group-item-action"></a>').text(item.name).data("item", item);
-              $("#suggestions").append(suggestion);
-            });
-          }
-    
-          function hideSuggestions() {
-            $("#suggestions").fadeOut(300, function() {
-              $(this).empty();
-            });
-          }
-    
-          $("#search").on("input", function() {
-            let query = $(this).val();
-            if (query.length > 1) {
-              $.getJSON("/search?query=" + query, function(data) {
-                if (data.length > 0) {
-                  showSuggestions(data);
-                } else {
-                  hideSuggestions();
-                }
-              });
-            } else {
-              hideSuggestions();
+
+
+
+        $(document).ready(function () {
+
+            function updateStatistics() {
+    $.getJSON("/statistics", function (data) {
+        console.log(data);
+        $("#unique-inn-count").text(data.unique_inn_count);
+        $("#contract-count").text(data.contract_count);
+        $("#total-delay-sum").text(data.total_delay_sum);
+    });
+}
+
+            updateStatistics();
+
+            function showSuggestions(data) {
+                $("#suggestions").empty().fadeIn(300);
+                $.each(data, function (index, item) {
+                    let suggestion = $('<a href="#" class="list-group-item list-group-item-action"></a>').text(item.name).data("item", item);
+                    $("#suggestions").append(suggestion);
+                });
             }
-          });
-    
-          $(document).on("click", "#suggestions a", function() {
-            let item = $(this).data("item");
-            $("#search").val(item.name);
-            hideSuggestions();
-            $("#results").fadeIn(300);
-            $("#details").empty();
-            
-            let contractInfoHtml = "";
-            $.each(item.contractInfo, function(index, contract) {
-            contractInfoHtml += `
+
+            function hideSuggestions() {
+                $("#suggestions").fadeOut(300, function () {
+                    $(this).empty();
+                });
+            }
+
+            function hideStatistics() {
+                $("#statistics").fadeOut(300);
+            }
+
+            function showStatistics() {
+                $("#statistics").delay(200).fadeIn(300);
+            }
+
+            $("#search").on("input", function () {
+                let query = $(this).val();
+                if (query.length > 1) {
+                    $.getJSON("/search?query=" + query, function (data) {
+                        if (data.length > 0) {
+                            showSuggestions(data);
+                        } else {
+                            hideSuggestions();
+                        }
+                    });
+                } else {
+                    hideSuggestions();
+                }
+            });
+
+            $(document).on("click", "#suggestions a", function () {
+                let item = $(this).data("item");
+                $("#search").val(item.name);
+                hideSuggestions();
+                hideStatistics();
+                $("#results").fadeIn(300);
+                $("#details").empty();
+
+                let contractInfoHtml = "";
+                $.each(item.contractInfo, function (index, contract) {
+                    contractInfoHtml += `
                 <div class="contract">
                 <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#contract-${index}">
                     Контракт ${contract.leasingContractName}
@@ -73,41 +133,43 @@
                     <div class="card card-body">
                     <p>ОДЗ: ${contract.odz}</p>
                     <p>Статус контракта: ${contract.contractState}</p>
-                    <p>Срок задержки: ${contract.delayTerm}</p>
-                    <p>Общая задержка платежа: ${contract.wholePaymentDelay}</p>
-                    <p>Название договора лизинга: ${contract.leasingContractName}</p>
-                    <p>Нумерация ID договора: ${contract.leasingContractNumberingId}</p>
-                    <p>Сумма задержки платежа с НДС в валюте контракта: ${contract.paymentDelaySumNdsInContractCurrency}</p>
+                    <p>Срок просрочки: ${contract.delayTerm}</p>
+                    <p>Просрочка целого платежа: ${contract.wholePaymentDelay}</p>
+                    <p>ID договора: ${contract.leasingContractNumberingId}</p>
+                    <p>Сумма просрочки: ${contract.paymentDelaySumNdsInContractCurrency}</p>
                     <p>Остаток задолженности по контракту: ${contract.indebtednessRemainsByContract}</p>
-                    <p>Логин эксперта по мониторингу: ${contract.monitoringExpertLogin}</p>
-                    <p>Имя эксперта по мониторингу: ${contract.monitoringExpertName}</p>
+                    <p>Имя эксперта: ${contract.monitoringExpertName}</p>
                     <p>Срок задержки возврата ПТС: ${contract.ptsReturnDelayTerm}</p>
                     </div>
                     </div>
                     </div>
                     `;
-                    });
-                    let details = `
-      <p>ID: ${item.id}</p>
-      <p>Название: ${item.name}</p>
-      <p>ИНН: ${item.inn}</p>
-      <p>Статус ЕГРЮЛ: ${item.egrulStatus}</p>
-      <p>ВИП: ${item.vip}</p>
-      <p>Нерезидент: ${item.noResident}</p>
-      <p>ID филиала: ${item.branchId}</p>
-      <p>ОНЧИ: ${item.onchi}</p>
-      <p>ОДЗ: ${item.odz}</p>
-      ${contractInfoHtml}
-    `;
+                });
+                let details = `
+                <div class="company-info-container">
+                    <h5>Иформация</h5>
+                    <br>
+                    <p>ID: ${item.id}</p>
+                    <p>Название: ${item.name}</p>
+                    <p>ИНН: ${item.inn}</p>
+                    <p>Статус ИГРЮЛ: ${item.egrulStatus}</p>
+                    <p>ВИП: ${item.vip}</p>
+                    <p>Нерезидент: ${item.noResident}</p>
+                    <p>ОНЧИ: ${item.onchi}</p>
+                    <p>ОДЗ: ${item.odz}</p>
+                    </div>
+                    ${contractInfoHtml}
+                    `;
 
-    $("#details").html(details);
-  });
+                    $("#details").html(details);
+    });
 
-  $("#back").on("click", function() {
-            $("#results").fadeOut(300);
-            $("#search").val("");
-          });
-        });
-    </script>
-  </body>
+    $("#back").on("click", function () {
+        $("#results").fadeOut(300);
+        showStatistics();
+        $("#search").val("");
+    });
+});
+</script>
+</body>
 </html>
